feat: change issue comment to normal textarea

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -811,6 +811,7 @@
     "Built-in code base": "Built-in code base",
     "Business-app-intro": "Business applications mainly refer to a combination of microservices that handle certain types of business processes, such as a member management application.",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "code scanning configuration is mainly divided into rule configuration and code quality access control configuration, where access control rules meet the situation, on behalf of the code quality threshold cannot pass",
+    "Collapse": "Collapse",
     "Comment ({meta} + Enter to send)": "Comment ({meta} + Enter to send)",
     "Config content": "Config content",
     "Config import": "Config import",
@@ -866,6 +867,7 @@
     "Projects": "Projects",
     "Scenes": "Scenes",
     "Search for the test plan I am involved in/responsible for.": "Search for the test plan I am involved in/responsible for.",
+    "Send": "Send",
     "System built-in Git repository": "System built-in Git repository",
     "Tags can be used for issue and test management, to quickly locate and filter relevant content.": "Tags can be used in issue management and test management, and reasonable use can quickly locate and filter related content",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "Tell about your project in one sentence, so that more people can quickly understand your project, go to",
