--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -811,6 +811,7 @@
     "Built-in code base": "内置代码库",
     "Business-app-intro": "业务应用主要是指处理某一类业务流程的微服务组合，比如会员管理的业务应用。",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "代码扫描配置主要分为规则配置和代码质量门禁配置，其中门禁规则满足的情况下，代表代码质量门槛不能通过",
+    "Collapse": "收起",
     "Comment ({meta} + Enter to send)": "评论 ({meta} + Enter 发送)",
     "Config content": "配置内容",
     "Config import": "配置导入",
@@ -866,6 +867,7 @@
     "Projects": "项目管理",
     "Scenes": "场景集合",
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
+    "Send": "发送",
     "System built-in Git repository": "系统内置Git仓库",
     "Tags can be used for issue and test management, to quickly locate and filter relevant content.": "标签可以用于事项管理、测试管理中，合理使用能够快速定位和过滤相关内容",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
