feat: add org in land page for community

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1953,6 +1953,7 @@
     "Apply for new organization": "Apply for new organization",
     "Choose your organization space": "Choose your organization space",
     "Collaborative Application Development Platform": "Collaborative Application Development Platform",
+    "Create new organization": "Create new organization",
     "On the Cloud": "On the Cloud",
     "Organizational space": "Organizational space",
     "account settings": "account settings",
@@ -1960,8 +1961,14 @@
     "approval": "approval",
     "back to application list": "back to application list",
     "back to dop": "back to DevOps platform",
+    "created successfully, please check in your org space": "created successfully, please check in your org space",
     "certificate": "certificate",
     "join organization": "join organization",
+    "only allowed to consist of lower case characters, numbers and -": "only allowed to consist of lower case characters, numbers and -",
+    "org description": "org description",
+    "org identify": "org identify",
+    "org logo": "org logo",
+    "org name": "org name",
     "logout": "logout",
     "mobile development management": "mobile development management",
     "page-not-found": "sorry, page not found",
