--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1953,6 +1953,7 @@
     "Apply for new organization": "申请新组织",
     "Choose your organization space": "选择您的组织空间",
     "Collaborative Application Development Platform": "应用协同开发平台",
+    "Create new organization": "创建新组织",
     "On the Cloud": "云上",
     "Organizational space": "组织空间",
     "account settings": "账号设置",
@@ -1960,8 +1961,14 @@
     "approval": "审批管理",
     "back to application list": "返回应用列表",
     "back to dop": "返回 DevOps 平台",
+    "created successfully, please check in your org space": "创建成功，请在您的组织空间里查看",
     "certificate": "证书管理",
     "join organization": "加入组织",
+    "only allowed to consist of lower case characters, numbers and -": "由小写字母、数字，-组成",
+    "org description": "组织描述",
+    "org identify": "组织标识",
+    "org logo": "组织 Logo",
+    "org name": "组织名称",
     "logout": "退出登录",
     "mobile development management": "移动开发管理",
     "page-not-found": "抱歉，当前页面不存在",
