--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -807,6 +807,7 @@
     "Are you sure to delete in batches?": "Are you sure to delete in batch?",
     "Are you sure to disinclude {name}": "Are you sure to disinclude {name}",
     "Are you sure to leave, with the error message not saved?": "Are you sure to leave, with the error message not saved?",
+    "Are you sure to release relationship with {name}": "Are you sure to release relationship with {name}",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.",
     "Built-in code base": "Built-in code base",
     "Business-app-intro": "Business applications mainly refer to a combination of microservices that handle certain types of business processes, such as a member management application.",
@@ -1210,7 +1211,6 @@
     "details": "details",
     "detected circular dependencies": "detected circular dependencies",
     "detection branch": "detection branch",
-    "disassociate": "disassociate",
     "disassociated successfully": "disassociated successfully",
     "disk size": "disk size",
     "display on demand": "display on demand",
