--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -805,8 +805,9 @@
     "App Center": "应用中心",
     "Applications release list top desc": "应用制品依赖于 pipeline 流水线中 release action 生成。release action 中填写了符合[版本号语义]的 tag_version 时，使用该 tag_version 作为制品版本名称；或基于 release/* 分支构建制品，且分支名称的基础部分符[版本号语义]时，使用分支名称的基础部分生成制品版本名称，如 release/1.1.3 分支构建的制品的版本名称为 1.1.3+20220101150405.",
     "Are you sure to delete in batches?": "确定批量删除吗？",
-    "Are you sure to disinclude {name}": "确认与 {name} 解除包含关系吗",
+    "Are you sure to disinclude {name}": "确认解除与 {name} 的包含关系吗",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
+    "Are you sure to release relationship with {name}": "确认接触与 {name} 的关系吗",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Built-in code base": "内置代码库",
     "Business-app-intro": "业务应用主要是指处理某一类业务流程的微服务组合，比如会员管理的业务应用。",
@@ -1210,7 +1211,6 @@
     "details": "详情信息",
     "detected circular dependencies": "检测到循环依赖",
     "detection branch": "检测分支",
-    "disassociate": "解除关联",
     "disassociated successfully": "解除关联成功",
     "disk size": "磁盘大小",
     "display on demand": "按需求显示",
