--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1090,6 +1090,7 @@
     "click to expand": "click to expand",
     "clone application": "clone application",
     "close issue": "close issue",
+    "closed": "closed",
     "cluster used by the environment": "cluster used by the environment",
     "code": "source",
     "code branch": "code branch",
