--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1090,6 +1090,7 @@
     "click to expand": "点击展开",
     "clone application": "克隆应用",
     "close issue": "关闭事项",
+    "closed": "已关闭",
     "cluster used by the environment": "环境所用的集群",
     "code": "代码",
     "code branch": "代码分支",
