feat(dop): new version issue detail page released :tada: (#3059)
* chore: merge master

* fix: member selector style

* refactor: update radio tab type

* feat: update edit field style

* feat: update issue meta fields style

* feat: update issue drawer header style

* refactor: update issue comment box

* refactor: update issue activities

* feat: remove useless style file

* fix: import

* refactor: change get app mr service to apiCreator

* feat: update issue activity style

* feat: support detect platform

* feat: loadmore selector support no border style

* feat: update type

* feat: update repo mr type and issue add mr relation

* feat: add batch operation common component

* feat: update edit field style

* feat: table footer support row selection operation

* feat: update issue add mr relation

* fix: submit issue comment only when input is focus

* feat: update issue activity style

* feat: update issue time trace style

* refactor: migrate project iteration service to apiCreator

* feat: change issue meta field responsive width

* refactor: update issue item style and logic

* feat: update issue item style

* refactor: update issue relation

* feat: update subscribe icon

* feat: update issue drawer

* refactor: migrate getIssue service to apiCreator

* refactor: update issue drawer and detail style

* feat: update issue drawer detail style

* refactor: update contractive filter type and split into standalone component

* refactor: update import

* feat: show shadow when scroll issue activity

* feat: support issue batch relate to mrs

* feat: remove redundant colon

* feat: make issue labels full width

* fix: issue time trace field width

* feat: change issue comment to normal textarea

* feat: support esc to collapse issue comment box

* fix: table row selection can not select all

* feat: lazy load labels list in issue detail drawer

* feat: only get special fields config in target type

* feat: update issue relation data list

* feat: show parent issu

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -805,12 +805,16 @@
     "App Center": "应用中心",
     "Applications release list top desc": "应用制品依赖于 pipeline 流水线中 release action 生成。release action 中填写了符合[版本号语义]的 tag_version 时，使用该 tag_version 作为制品版本名称；或基于 release/* 分支构建制品，且分支名称的基础部分符[版本号语义]时，使用分支名称的基础部分生成制品版本名称，如 release/1.1.3 分支构建的制品的版本名称为 1.1.3+20220101150405.",
     "Are you sure to delete in batches?": "确定批量删除吗？",
-    "Are you sure to disinclude {name}": "确认与 {name} 解除包含关系吗",
+    "Are you sure to disinclude {name}": "确认解除与 {name} 的包含关系吗",
     "Are you sure to leave, with the error message not saved?": "是否确认离开，离开将不保存错误信息",
+    "Are you sure to release relationship with {name}": "确认接触与 {name} 的关系吗",
     "Branch binds environment in the platform. The branch code can only be deployed to the environment selected below by CI/CD pipeline.": "平台中分支绑定环境，该分支代码通过平台 CI/CD 流水线后仅能部署到下面选择的环境中",
     "Built-in code base": "内置代码库",
     "Business-app-intro": "业务应用主要是指处理某一类业务流程的微服务组合，比如会员管理的业务应用。",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "代码扫描配置主要分为规则配置和代码质量门禁配置，其中门禁规则满足的情况下，代表代码质量门槛不能通过",
+    "Collapse": "收起",
+    "Comment ({meta} + Enter to send)": "评论 ({meta} + Enter 发送)",
+    "Comment ({meta} + Enter to send, Esc to collapse)": "评论 ({meta} + Enter 发送, Esc 收起)",
     "Config content": "配置内容",
     "Config import": "配置导入",
     "Create a new issue, and you can drag it to the iteration on the right and set its priority.": "创建新事项，并可以通过拖拽至右侧迭代，安排事项的优先级",
@@ -863,9 +867,9 @@
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
     "Project homepage": "主页",
     "Projects": "项目管理",
-    "Remaining": "剩余",
     "Scenes": "场景集合",
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
+    "Send": "发送",
     "System built-in Git repository": "系统内置Git仓库",
     "Tags can be used for issue and test management, to quickly locate and filter relevant content.": "标签可以用于事项管理、测试管理中，合理使用能够快速定位和过滤相关内容",
     "Tell about your project in one sentence, so that more people can quickly understand your project, go to": "用一句话讲述你的项目，让更多的人快速了解你的项目，前往",
@@ -906,7 +910,7 @@
     "ability app": "能力应用",
     "access control value": "门禁值",
     "account switching": "账号切换中",
-    "activity log": "活动日志",
+    "activity": "活动",
     "actual value": "实际值",
     "add": "新增",
     "add access control rules": "添加门禁规则",
@@ -919,7 +923,6 @@
     "add label": "添加标签",
     "add pipeline": "新建流水线",
     "add relation to MR": "关联了MR",
-    "add remark": "添加备注",
     "add service instance": "添加服务实例",
     "add test plan name": "添加测试计划名称",
     "add test set": "添加测试集",
@@ -1015,6 +1018,7 @@
     "batch processing": "批量处理",
     "batch-delete-tip-content": "该扫描规则将永久删除",
     "be formal": "转正式",
+    "be related by these issues": "被以下事项关联",
     "be sure to make {name} official?": "确认将 {name} 转为正式制品?",
     "belong to, not belong to": "属于、不属于",
     "belongs to": "属于",
@@ -1069,10 +1073,12 @@
     "checkrun-success-tip": "本次 MR 中代码审查成功，详情请查看流水线",
     "chinese, letters, numbers": "中文、字母、数字",
     "chinese/english search for input form": "输入表的中文/英文搜索",
+    "choose MR": "选择 MR",
     "choose branch": "选择分支",
     "choose certificate": "选择证书",
     "choose frequently used applications and set them as stars for easy operation": "选择常用应用设置为星标，方便操作",
     "choose frequently used project and set them as stars for easy operation": "选择常用项目设置为星标，方便操作",
+    "choose issues": "选择事项",
     "choose module": "选择模块",
     "choose the workflow file (master branch)": "选择workflow文件（master分支）",
     "circulation setting": "流转设置",
@@ -1084,6 +1090,7 @@
     "click to expand": "点击展开",
     "clone application": "克隆应用",
     "close issue": "关闭事项",
+    "closed": "已关闭",
     "cluster used by the environment": "环境所用的集群",
     "code": "代码",
     "code branch": "代码分支",
@@ -1102,6 +1109,7 @@
     "collapse file": "收起文件",
     "command": "命令",
     "commented at": "评论于",
+    "comments": "评论",
     "commit ID": "提交ID",
     "commit branch": "提交分支",
     "commit message": "提交信息",
@@ -1146,8 +1154,6 @@
     "copy issue": "复制事项",
     "copy to": "复制到",
     "cores": "核数",
-    "create and include the task": "创建并包含任务",
-    "create and relate to the issue": "创建并关联事项",
     "create deployment": "创建部署",
     "create document": "创建文档",
     "create folder": "新建文件夹",
@@ -1161,6 +1167,7 @@
     "creating folder is only allowed under the branch": "只能在分支下新建文件夹",
     "creation date": "创建日期",
     "creation method": "创建方式",
+    "creator": "创建者",
     "current": "当前",
     "current branch or path": "当前分支或路径",
     "current month": "本月",
@@ -1205,7 +1212,6 @@
     "details": "详情信息",
     "detected circular dependencies": "检测到循环依赖",
     "detection branch": "检测分支",
-    "disassociate": "解除关联",
     "disassociated successfully": "解除关联成功",
     "disk size": "磁盘大小",
     "display on demand": "按需求显示",
@@ -1299,10 +1305,8 @@
     "filter by alarm type": "按告警类型过滤",
     "filter by application name": "通过所在应用名过滤",
     "filter by committed message": "按提交信息过滤",
-    "filter by creator": "按创建人过滤",
     "filter by data source name": "通过数据源名称过滤",
     "filter by priority": "使用优先级过滤",
-    "filter condition": "过滤条件",
     "filter name": "筛选器名称",
     "folder is created successfully": "创建文件夹成功",
     "follow": "关注",
@@ -1340,7 +1344,6 @@
     "import parameters": "导入参数",
     "import source": "引入源",
     "import use case": "引入用例",
-    "include existing tasks": "包含已有任务",
     "included tasks": "包含的任务",
     "informal": "非正式",
     "initiated": "我发起的",
@@ -1405,7 +1408,6 @@
     "lock-operation-tip": "仓库已锁定，无法进行此操作",
     "logAnalysis": "日志分析",
     "logService": "日志服务",
-    "logged": "已记录",
     "loop strategy": "循环策略",
     "low": "一般",
     "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.": "主要管理事项字段属性的自定义配置，保存为整个组织级项目的事项模板配置。",
@@ -1488,7 +1490,6 @@
     "no member is concerned about it": "暂无成员关注",
     "no more than 30 characters": "不超过30个字符",
     "no releases have been selected yet": "暂未选择任何制品",
-    "no time logged": "无记录的时间",
     "no {name}": "暂无{name}",
     "node params": "节点入参",
     "node reference": "引用节点",
@@ -1561,6 +1562,7 @@
     "plan details": "计划详情",
     "plan name": "计划名称",
     "plan-remove-case-confirm": "是否确认在当前计划中移除掉当前选中用例?",
+    "planFinishedAt": "计划截止时间",
     "please add a test leader": "请添加测试负责人",
     "please add tasks first, and then configure outputs": "请先配置有效任务，再配置出参",
     "please add test participants": "请添加测试参与人",
@@ -1671,19 +1673,16 @@
     "reference certificate": "引用证书",
     "refresh every {time}, click to refresh now": "每{time}刷新，点击立即刷新",
     "registration center": "注册中心",
-    "relate to mr": "关联合并请求",
     "relate to test case": "关联测试用例",
-    "related by these issues": "被以下事项关联",
     "related issue type": "关联事项类型",
+    "related mr": "关联的合并请求",
     "related task": "关联任务",
-    "related to existing issues": "关联已有事项",
     "related to these issues": "关联了以下事项",
     "relation added successfully": "添加关联成功",
     "release name": "制品名称",
     "release relationship": "解除关系",
     "release version": "发布版本",
     "remark": "备注",
-    "remarked at": "备注于",
     "rename": "重命名",
     "reopen": "重新打开",
     "repeat number of lines": "重复行数",
@@ -1723,7 +1722,6 @@
     "search by ID, person or product information": "搜索ID、人名或制品名",
     "search by application name": "按应用名称搜索",
     "search by chinese/english name of attribute": "输入属性的中文/英文名搜索",
-    "search by id or title": "按id或标题搜索",
     "search for": "搜索",
     "search label under project": "搜索项目下的标签",
     "searchCenter": "搜索中心",
@@ -1885,6 +1883,7 @@
     "total number of pipelines": "流水线总数",
     "total number of use cases": "用例总数",
     "traffic load": "流量负载",
+    "transfer": "流转",
     "transfer-custom-addon": "可在其他项目中导入如下配置，来创建相同的自定义服务",
     "trigger timing": "触发时机",
     "ultimate edition": "旗舰版",
@@ -1894,6 +1893,7 @@
     "unlimited": "不限",
     "unpin": "取消置顶",
     "unpinned successfully": "取消置顶成功",
+    "unspecified": "未指定",
     "update completed": "更新成功",
     "update priority": "更新优先级",
     "update-dice-yml-env": "是否需要更新dice.yml, 比如新增（修改）环境变量等",
@@ -2277,6 +2277,7 @@
     "http status code": "http 状态码",
     "identification": "鉴别",
     "idle connections": "idle连接数",
+    "independent authorization method": "独立授权方法",
     "index": "索引",
     "information": "信息",
     "ingress traffic monitoring": "入口流量监控",
