feat: update test case relation style

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1673,7 +1673,7 @@
     "reference certificate": "reference certificate",
     "refresh every {time}, click to refresh now": "refresh every {time}, click to refresh now",
     "registration center": "registration center",
-    "relate to test case": "relate to test case",
+    "related test case": "related test case",
     "related issue type": "related issue type",
     "related mr": "relate to merge request",
     "related task": "related task",
