fix: update issue drawer detail style

--- a/locales/en.json
+++ b/locales/en.json
@@ -37,6 +37,7 @@
     "Chengdu": "Chengdu",
     "China": "China",
     "Cloud management": "Cloud management",
+    "Collapse": "Collapse",
     "Config": "Config",
     "Contact your organization administrator to invite you to join": "Contact your organization administrator to invite you to join",
     "DB error": "DB error",
@@ -50,6 +51,7 @@
     "East China {num}": "East China {num}",
     "Enter to save quickly, Enter + {meta} to save and continue": "Enter to save quickly, Enter + {meta} to save and continue",
     "Europe & America": "Europe & America",
+    "Expand": "Expand",
     "Fast data": "Fast data",
     "February": "February",
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see",
@@ -298,9 +300,7 @@
     "city": "city",
     "clear": "clear",
     "clear content": "clear content",
-    "click to collapse": "click to collapse",
     "click to copy": "click to copy",
-    "click to view more": "click to view more",
     "click to view password": "click to view password",
     "client": "client",
     "client identifier": "client identifier",
