--- a/locales/zh.json
+++ b/locales/zh.json
@@ -37,6 +37,7 @@
     "Chengdu": "成都",
     "China": "中国",
     "Cloud management": "多云管理平台",
+    "Collapse": "收起",
     "Config": "配置",
     "Contact your organization administrator to invite you to join": "联系组织管理员，邀请您加入",
     "DB error": "数据库错误",
@@ -50,6 +51,7 @@
     "East China {num}": "华东{num}",
     "Enter to save quickly, Enter + {meta} to save and continue": "Enter 快速创建，Enter + {meta} 保存并继续创建",
     "Europe & America": "欧洲与美洲",
+    "Expand": "展开",
     "Fast data": "快数据平台",
     "February": "2月",
     "For cluster resource information corresponding to each environment, the concept and settings of specific clusters, please see": "各环境对应的集群资源信息，具体集群的概念和设置请参考",
@@ -298,9 +300,7 @@
     "city": "城市区域",
     "clear": "清空",
     "clear content": "清空内容",
-    "click to collapse": "点击收起",
     "click to copy": "单击复制",
-    "click to view more": "点击查看更多",
     "click to view password": "点击查看密码",
     "client": "客户端",
     "client identifier": "客户端标识",
