refactor(msp): remove useless page of application insight,  mobile insight,  project-report (#3016)
* refactor: remove useless page of application insight

* refactor: remove useless page of mobile insight in msp

* refactor: remove useless page of project report in msp

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2470,6 +2470,7 @@
     "service monitor": "ServiceMonitor",
     "service name": "service name",
     "service request overview": "service request overview",
+    "service registration list": "service registration list",
     "service routing prefix": "service routing prefix",
     "service topology": "service topology",
     "set datum point": "set datum point",
