--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2470,6 +2470,7 @@
     "service monitor": "服务监控",
     "service name": "服务名",
     "service request overview": "服务请求概览",
+    "service registration list": "服务注册列表",
     "service routing prefix": "服务路由前缀",
     "service topology": "服务拓扑",
     "set datum point": "设置基准点",
