--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -867,6 +867,7 @@
     "Please fill in the json expression of obtained target key to determine if the key exists.": "值请填获取目标key的json表达式，以判断该key是否存在。",
     "Project homepage": "主页",
     "Projects": "项目管理",
+    "Rendering multi-layer nested structures is not supported at this time, please go to text mode.": "暂不支持渲染多层嵌套结构，请前往文本模式。",
     "Scenes": "场景集合",
     "Search for the test plan I am involved in/responsible for.": "搜索我参与/负责的测试计划",
     "Send": "发送",
